# PCS-Polito

./: prova.txt
ProgettoPCS/: CMakeLists.txt  algoritmi_circuiti.hpp  altri_ris.cpp  calcolocond.hpp  grafi.hpp  main.cpp  parser.hpp  sistemi_lineari.hpp  test_calcola_output.cpp  test_creazione_B_R.cpp  test_de_pina.cpp  test_dfs_cicli.cpp  test_findpath.cpp  test_gc.cpp  test_lifofifo.cpp  test_visite.cpp  visite.hpp
esercitazione1/: CMakeLists.txt  esercizio1.cpp  printargs.cpp
esercitazione1_local/: esercizio1.cpp
esercitazione1_local/BUILD_es1/: CMakeCache.txt  Makefile  calcolo_temperature  cmake_install.cmake
esercitazione2/: CMakeLists.txt  esercizio2.cpp  printadd.cpp
esercitazione2.1/: esercizio2.cpp  prog
esercitazione2.1/Build_es2/: CMakeCache.txt  Makefile  cmake_install.cmake  prova
esercitazione3/: rational.hpp
esercitazione3.1/: CMakeLists.txt  prog  rational.hpp  tempCodeRunnerFile.hpp
esercitazione3.1/Build1/: CMakeCache.txt  Makefile  cmake_install.cmake  es3
esercitazione4.1/: CMakeLists.txt
esercitazione4.1/Build_es4/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  confronti  test_bubblesort  test_insertionsort  test_selectionsort
esercitazione4.1/Build_es4/Testing/Temporary/: CTestCostData.txt
esercitazione5/: ordinamento.hpp  osservazioni.txt  test_merge.cpp  test_quick.cpp
esercitazione5.1/: CMakeLists.txt  confronta.cpp
esercitazione5.1/Buildes5_debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  confronti  test_bubblesort  test_insertionsort  test_mergesort  test_quicksort  test_selectionsort
esercitazione5.1/Buildes5_debug/Testing/Temporary/: CTestCostData.txt
esercitazione5.1/Buildes5_release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  confronti  test_bubblesort  test_insertionsort  test_mergesort  test_quicksort  test_selectionsort
esercitazione5.1/Buildes5_release/Testing/Temporary/: CTestCostData.txt
esercitazione6/: grafi.hpp  main.cpp
esercitazione6.1/: CMakeLists.txt  grafi.hpp  test_grafi.cpp
esercitazione6.1/Buildes6/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  grafi  test_grafi
esercitazione6.1/Buildes6/Testing/Temporary/: CTestCostData.txt
esercitazione7/: grafi.hpp  main.cpp  visite.hpp
esercitazione7.1/: grafi.hpp  grafodot.hpp  main.cpp  visite.hpp
esercitazione7.1/Buildes7/: CMakeCache.txt  Makefile  albero_cammini_minimi.dot  cmake_install.cmake  grafo_originale.dot  mappa_italia_completa.dot  minimi.dot  originale.dot  visita_bfs.dot  visita_dfs.dot  visita_dfs_ricorsiva.dot  visite
esercitazione7.1/Immagini_grafi/: grafo_originale.dot  visita_bfs.dot  visita_dfs.dot  visita_dfs_ricorsiva.dot
esercitazione8/: CMakeLists.txt
esercitazione8.1/: GC.hpp
esercitazione8.1/Buildes8/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  gcd
esercitazione8.1/Buildes8/Testing/Temporary/: CTestCostData.txt
